Add support for --add-opens to JavaModules.